<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_layouts">

    <fragment
        android:id="@+id/navigation_layouts"
        android:name="ibm.com.layouts.ui.layouts.LayoutsFragment"
        android:label="@string/title_layouts"
        tools:layout="@layout/fragment_layouts" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="ibm.com.layouts.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_confirmation_screen"
            app:destination="@id/navigation_confirmation_screen" />
    </fragment>

    <fragment
    android:id="@+id/navigation_fun_activity"
    android:name="ibm.com.layouts.ui.funActivity.FunActivityFragment"
    android:label="@string/title_fun"
    tools:layout="@layout/fragment_fun" >
        <action
            android:id="@+id/action_navigation_fun_activity_to_foodItemListFragment2"
            app:destination="@id/foodItemListFragment" />
    </fragment>

    <fragment
    android:id="@+id/navigation_confirmation_screen"
    android:name="ibm.com.layouts.ui.login.confirmationScreen.ConfirmationScreenFragment"
    android:label="@string/title_confirmation"
    tools:layout="@layout/confirmation_screen" >
        <argument
            android:name="firstName"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/foodItemListFragment"
        android:name="ibm.com.layouts.ui.funActivity.FoodItemListFragment"
        android:label="@string/sign_up_confirmation"
        tools:layout="@layout/fragment_food_item_list" >
        <argument
            android:name="name"
            app:argType="string" />
    </fragment>
</navigation>